fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,15 @@ main{
     left: 0;
     right: 0;
     background-color: #0a0a0af1;
+    
+
+}
+
+#settings{
+    padding: 100px;
+}
+
+#reset{
     padding: 15%;
 
 }
@@ -72,7 +81,7 @@ main{
 #limit,
 #themes{
     max-width: 400px;
-    margin: 10px auto;
+    margin: 35px auto;
     border: 1px solid white;
     border-radius: 10px;
 }
